--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "seed:dev": "nodemon ./db/seed.js",
+    "seed": "node ./db/seed.js",
+    "start:dev": "nodemon index.js",
+    "start": "node index.js",
+    "test": "jest --runInBand",
+    "test:watch": "jest --watchAll --runInBand --config=jest.config.js"
   },
   "author": "",
   "license": "ISC",
